--- a/css/blocks.css
+++ b/css/blocks.css
@@ -2,6 +2,12 @@
  * Blocks CSS
  * # Core Blocks
  * 	## Common
+ * 		### Title
+ * 		### Headline
+ * 		### Paragraph
+ * 		### List
+ * 		### Quote
+ * 		### Images
  * 	## Formatting
  * 	## Layout
  * 	## Widgets
@@ -10,12 +16,13 @@
  *
  */
 
-
 /* *
  * # Core Blocks 
  */
 
 .wp-block{
+	font-family: "Rhodium Libre", serif;
+	font-size: 22px;
 	margin: 0 auto;
 	max-width: 48rem;
 }
@@ -25,6 +32,30 @@
  * Paragraph, Image, Heading, Subheading, Gallery, List, Quote, Audio, Cover Image, File, Video
  * example: core/paragraph
  */
+
+/* *
+ * ### Title - Post Title, Page Title
+ */
+h1.entry-title,
+.wp-block.editor-post-title__block .editor-post-title__input {
+	color: rgb(64, 64, 64);
+	font-family: "Rhodium Libre", serif;
+	font-size: 3rem;
+	font-weight: normal;
+	line-height: 1.5;
+}
+
+/* *
+ * ### Headline
+ */
+
+/* *
+ * ### Paragraph
+ */
+
+p.wp-block-paragraph.editor-rich-text__tinymce {
+	font-size: 22px;
+}
 
 /* *
  * ## Formatting
