--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://joseph-dickson.com/readability-wordpress-theme
 Author: Joseph Dickson 
 Author URI: https:/joseph-dickson.com/
 Description: Readabilty gets out of the way and presents your content comfortably on small and large screens and is designed to serve well for blogs and portfolios.
-Version: 1.0.3
+Version: 1.0.4
 License: GNU General Public License v2 or later
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: readability
@@ -1116,14 +1116,15 @@ a.post-thumbnail {
 }
 
 .site-description {
-	margin: 0.25rem 0 3rem 0;
+	margin: 0 0 1rem 0;
 
 	
 }
 
 .site-title {
 	font-size: 2.5rem;
-	margin: 3rem 0 0 0;
+	line-height: 1.3;
+	margin: 1rem 0 0 0;
 }
 
 .site-info {
