--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://joseph-dickson.com/readability-wordpress-theme
 Author: Joseph Dickson 
 Author URI: https:/joseph-dickson.com/
 Description: Readabilty gets out of the way and presents your content comfortably on small and large screens and is designed to serve well for blogs and portfolios.
-Version: 1.0.16
+Version: 1.0.17
 License: GNU General Public License v2 or later
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: readability
@@ -633,34 +633,21 @@ textarea {
 a {
 	border-bottom: 1px inset;
 	color: royalblue;
-	display: inline-block;
 	margin-bottom: 2px;
+	margin: -5px;
+	padding: 5px;
 	text-decoration: none;
 }
 
 a:hover,
 a:focus,
 a:active {
+	background-color: #FFFFC3;
 	border-bottom: 3px inset;
 	color: midnightblue;
 	line-height: inherit;
-	margin-bottom: 0;
-}
-
-a:focus {
 	outline: thin solid;
-}
-
-a:hover, 
-a:focus, 
-a:active {
-	background-color: #FFFFC3;
 	margin: -5px -5px -7px -5px;
-	padding: 5px;
-}
-
-a {
-	margin: -5px;
 	padding: 5px;
 }
 
@@ -671,7 +658,6 @@ a {
 	clear: both;
 	display: block;
 	float: left;
-	line-height: 1;
 	text-align: center;
 	width: 100%;
 }
@@ -716,15 +702,7 @@ a {
 }
 
 .main-navigation a {
-	border: 3px solid transparent;
-	border-width: 0 0 3px 0;
 	display: block;
-	text-decoration: none;
-}
-
-.main-navigation a:hover {
-	border: solid;
-	border-width: 0 0 3px 0;
 }
 
 .menu-menu-container {
@@ -766,6 +744,15 @@ a {
 	float: right;
 	text-align: right;
 	width: 50%;
+}
+
+.comment-navigation .nav-previous,
+.posts-navigation .nav-previous,
+.post-navigation .nav-previous,
+.comment-navigation .nav-next,
+.posts-navigation .nav-next,
+.post-navigation .nav-next {
+	line-height: 3;
 }
 
 /*--------------------------------------------------------------
@@ -1145,7 +1132,7 @@ h1.site-title {
 	font-family: 'Rhodium Libre','serif';
 	font-size: 2.5rem;
 	font-weight: normal;
-	line-height: 1.3;
+	line-height: inherit;
 	margin: 1rem 0 0 0;
 }
 
