--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-/*!
+/*
 Theme Name: Readability
 Theme URI: https://joseph-dickson.com/readability-wordpress-theme
 Author: Joseph Dickson 
 Author URI: https:/joseph-dickson.com/
 Description: Readabilty gets out of the way and presents your content comfortably on small and large screens and is designed to serve well for blogs and portfolios.
-Version: 1.0.17
+Version: 1.0.18
 License: GNU General Public License v2 or later
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: readability
@@ -407,7 +407,6 @@ textarea {
 	font-size: 22px;
 	font-style: normal;
 	font-weight: 400;
-	line-height: 1.7;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -631,24 +630,21 @@ textarea {
 ## Links
 --------------------------------------------------------------*/
 a {
-	border-bottom: 1px inset;
+	border-bottom: 1px solid;
 	color: royalblue;
-	margin-bottom: 2px;
-	margin: -5px;
-	padding: 5px;
 	text-decoration: none;
+	display: inline-block;
+	line-height: 0.8;
+	margin: -5px -5px -7px -5px;
+	padding: 5px;
 }
 
 a:hover,
 a:focus,
 a:active {
 	background-color: #FFFFC3;
-	border-bottom: 3px inset;
+	border-bottom: 3px solid;
 	color: midnightblue;
-	line-height: inherit;
-	outline: thin solid;
-	margin: -5px -5px -7px -5px;
-	padding: 5px;
 }
 
 /*--------------------------------------------------------------
@@ -699,14 +695,6 @@ a:active {
 	margin: 5px;
 	padding: 5px;
 	position: relative;
-}
-
-.main-navigation a {
-	display: block;
-}
-
-.menu-menu-container {
-	line-height: 0;
 }
 
 /* Small menu. */
@@ -930,6 +918,7 @@ h2.widget-title {
 .entry-summary > *,
 .page-content > *,
 .page-title {
+	line-height: 1.7;
 	margin: 0 auto;
 	max-width: 48rem;
 	padding: 0.7rem 1rem;
@@ -1132,7 +1121,6 @@ h1.site-title {
 	font-family: 'Rhodium Libre','serif';
 	font-size: 2.5rem;
 	font-weight: normal;
-	line-height: inherit;
 	margin: 1rem 0 0 0;
 }
 
